recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:18: error: '(' expected but identifier found.
  if height <= 1 {
     ^SplitHanoi3:26: error: illegal start of simple expression
}
^